--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html><head></head>
 <body>
-<h1>Hello world.</h1>
+<script>
+  async function list_directory(user, repo, directory) {
+  const url = `https://api.github.com/repos/${matthew-schmidt}/${EDIT6190e}/git/trees/master`;
+  const list = await fetch(url).then(res => res.json());
+  const dir = list.tree.find(node => node.path === directory);
+  if (dir) {
+     const list = await fetch(dir.url).then(res => res.json());
+     return list.tree.map(node => node.path);
+  }
+}
+</script>
 </body>
 </html>
