--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html><head></head>
 <body>
 <script>
-  async function list_directory(user, repo, directory) {
-  const url = `https://api.github.com/repos/${matthew-schmidt}/${EDIT6190e}/git/trees/master`;
+async function list_directory(user, repo, directory) {
+  const url = `https://api.github.com/repos/${user}/${repo}/git/trees/master`;
   const list = await fetch(url).then(res => res.json());
   const dir = list.tree.find(node => node.path === directory);
   if (dir) {
