--- a/index_old.html
+++ b/index_old.html
@@ -1,15 +1,5 @@
 <html><head></head>
 <body>
-<script>
-async function list_directory(user, repo, directory) {
-  const url = `https://api.github.com/repos/${user}/${repo}/git/trees/master`;
-  const list = await fetch(url).then(res => res.json());
-  const dir = list.tree.find(node => node.path === directory);
-  if (dir) {
-     const list = await fetch(dir.url).then(res => res.json());
-     return list.tree.map(node => node.path);
-  }
-}
-</script>
+<h1>am I doing it right</h1>
 </body>
 </html>
